# Plant-Sensor-Quantum-Root-Cause-Analysis

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  PSRCA Architecture.md  README.md  Why Cursor Excels for Quantum Development Work.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
notebooks/: 01_qubo_playground.ipynb  02_qaoa_tuning.ipynb  03_ibm_runtime_integration.ipynb
src/psq/: __init__.py  config.py  logging_utils.py
src/psq/api/: __init__.py  fastapi_app.py
src/psq/data/: __init__.py  featurization.py  loaders.py  schemas.py
src/psq/quantum/: __init__.py  qaoa_solver.py  qiskit_runtime.py  simulators.py
src/psq/qubo/: __init__.py  encode_ising.py  model.py  postprocess.py
src/psq/service/: __init__.py  api_models.py  orchestrator.py
tests/: __init__.py  test_encode_ising.py  test_qaoa_solver_sim.py  test_qubo_model.py  test_service_endpoints.py
